Tilføj meget korte noter

--- a/DM553/Ordbog.tex
+++ b/DM553/Ordbog.tex
@@ -61,9 +61,9 @@ Dette er alle de ord og termer der bruges i kurset, oversat til dansk. Bemærk a
   The Yieldability Problem & Problemet om at kunne nå en konfiguration
 \end{longtable}
 
-%%% Local Variables:
+%%% local variables:
 %%% mode: latex
-%%% TeX-engine: xetex
-%%% TeX-command-extra-options: "-shell-escape"
-%%% TeX-master: "main"
-%%% End:
+%%% tex-engine: xetex
+%%% tex-command-extra-options: "-shell-escape"
+%%% tex-master: "main"
+%%% end:
