--- a/preamble.tex
+++ b/preamble.tex
@@ -51,7 +51,7 @@
 	double distance=2pt, % Udseende på accept states
 	every edge/.style={ % Egenskaber for hver transition
 			draw,
-			->, >=stealth', % bold arrowheads
+			>=stealth', % bold arrowheads
 			auto,
 			semithick
 		}
